Bug 1754810 - Centralize sampling decisions in SMILAnimationController. r=longsonr

Differential Revision: https://phabricator.services.mozilla.com/D172114